# esp32s3_320p_sr_86box_oman_demo

./: CMakeLists.txt  README.md  partitions_two_ota_coredump.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/RTC_Clock/: CMakeLists.txt  ESP32_Clock.c  ESP32_Clock.h
components/bsp/: CMakeLists.txt
components/bus/: 8080_lcd_esp32s3.c  CMakeLists.txt  i2s_lcd_esp32_driver.c  i2s_lcd_esp32s2_driver.c  spi_bus.c
components/bus/include/: i2c_bus.h  i2s_lcd_driver.h
components/custom/: CMakeLists.txt  custom.c  custom.h  lv_conf_ext.h
components/custom/esp-sr/.github/workflows/: issue_comment.yml  new_issues.yml  new_prs.yml
components/custom/esp-sr/include/esp32s3/: esp_mn_iface.h
components/espressif__esp-dsp/: idf_component.yml
components/espressif__esp-sr/: idf_component.yml
components/i2c_bus/: CMakeLists.txt  i2c_device.c  i2c_device.h
components/lvgl/: Kconfig
components/lvgl/src/: lv_conf_internal.h
components/qmsd_api/: CMakeLists.txt
components/qmsd_api/include/: qmsd_api.h
components/qmsd_api/src/: qmsd_nvs.c
components/qmsd_sensor/: CMakeLists.txt
components/qmsd_sensor/aht20/: aht20.c  aht20.h
components/qmsd_sensor/al01/: al01.c  al01.h
components/qmsd_utils/: CMakeLists.txt  qmsd_board_init.h  qmsd_crc16.c  qmsd_utils.c  qmsd_utils.h
components/screen/: CMakeLists.txt  Kconfig  component.mk  screen_driver.c  screen_driver.h
components/screen_ext/: CMakeLists.txt
components/touch/: CMakeLists.txt
components/touch_panel/: CMakeLists.txt  Kconfig  component.mk  touch_panel.c  touch_panel.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/app/: app_player.c  app_sr.c  app_sr.c.bak  app_sr.h  app_sr_handler.c
main/board/: board.c  board_8ms.c  board_pin.h  user_board.h
main/board/codec/: audio_hal.h  zx_es8388.c  zx_es8388.h
(+37 files in other folders)
